优化合约持久化问题及合约列表加载问题